--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -25,7 +25,7 @@
 	                <input type="text" class="form-control email-form" placeholder = "아이디" id="loginId">
 	                <input type="password" class="form-control input-form-join" placeholder = "비밀번호" id="password">
 	                
-	                <button type = "submit" class="btn btn-block btn-primary join-button">가입하기</button>
+	                <button type = "submit" class="btn btn-block btn-primary join-button">로그인</button>
                 </form>
                 
                 <div class="find-password d-flex justify-content-center align-items-center">
