--- a/src/main/resources/templates/post/timeline.html
+++ b/src/main/resources/templates/post/timeline.html
@@ -51,11 +51,11 @@
 	    					<!-- 좋아요 -->
 	    					<div th:data-like-id="${post.postId}" class="likeBtn" th:data-like-check="${post.like}">
 	    						<!-- 좋아요 체크 안됨 -->
-		    					<svg th:id="'likeBtnNoFill' + ${post.postId}" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+		    					<svg th:if="${post.like} == false" th:id="'likeBtnNoFill' + ${post.postId}" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
 									<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
 								</svg>
 								<!-- 좋아요 체크 -->
-								<svg th:id="'likeBtnFill' + ${post.postId}" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="red" class="bi bi-heart-fill d-none" viewBox="0 0 16 16">
+								<svg th:if="${post.like} == true" th:id="'likeBtnFill' + ${post.postId}" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="red" class="bi bi-heart-fill" viewBox="0 0 16 16">
 									<path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
 								</svg>
 							</div>
@@ -81,7 +81,7 @@
 	    			</div>
 	    			<!-- 좋아요 갯수 부분 -->
 	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
-	    				<div class="subHeadingTwenty">좋아요 8565개</div>
+	    				<div class="subHeadingTwenty">좋아요<span th:text="${post.likeCount}">8565</span>개</div>
 	    			</div>
 	    			<!-- 본문 부분 -->
 	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
@@ -91,14 +91,19 @@
 	    			<!-- 댓글 부분 -->
 	    			<div class="timelineCommentSection pl-2 pt-2">
 	    				<!-- 댓글 접기 펴기 -->
-	    				<div class="smallTextSecondary">댓글 5456개 모두 보기</div>
+	    				<div class="smallTextSecondary">댓글 <span th:text="${post.commentCount}">5456</span>개 모두 보기</div>
 	    				<!-- 메인 댓글 -->
-	    				<div class="subHeadingTwenty mt-2 d-flex">
-	    					<div>idjse_22</div>
-	    					<div class="ml-2">우와 사고시퍼요~~</div>
+	    				<div class="subHeadingTwenty mt-2 d-flex justify-content-between"  th:each="comment:${post.commentList}">
+	    					<div class="d-flex">
+		    					<div  th:text="${comment.loginId}">idjse_22</div>
+		    					<div  class="ml-2" th:text="${comment.comment}">우와 사고시퍼요~~</div>
+	    					</div>
+	    					<button type="button" class="btn btn-danger btn-sm deleteBtn" th:data-comment-delete-btn = "${comment.id}">삭제</button>
 	    				</div>
+	    				<!-- 댓글 입력 -->
 	    				<div class="d-flex mt-2">
-	    					<input type="text" class="commentInput flex-fill mr-2" placeholder="댓글 달기">
+	    					<input type="text" class="commentInput flex-fill mr-2" placeholder="댓글 달기" th:id="'comment' + ${post.postId}">
+	    					<button type="button" class="btn btn-primary commentBtn"  th:data-comment-btn = "${post.postId}">게시</button>
 	    				</div>
 	    			</div>
 	    		</div>
@@ -111,9 +116,68 @@
     
     <script layout:fragment="script">
     	$(document).ready(function(){
+    		// 댓글 삭제 이벤트
+    		$(".deleteBtn").on("click", function(){
+    			let commentId = $(this).data("comment-delete-btn");
+    			
+    			let formData = new FormData();
+    			formData.append("commentId", commentId);
+    			
+    			$.ajax({
+    				type : "delete"
+    				, url : "/marondalgram/post/comment/delete"
+    				, data : formData
+    				, processData : false // 파일 업로드 필수
+                    , contentType : false // 파일 업로드 필수
+                    , success : function(data){
+                    	if(data.result == "success"){
+                    		location.reload();
+                    	}else{
+                    		alert("댓글 삭제 실패!");
+                    	}
+                    }
+    				, error : function(){
+    					alert("댓글 삭제 오류!")
+    				}
+    			}); // 댓글 삭제 ajax 종료
+    			
+    		}); // 댓글 삭제 이벤트 종료
     		
-    		// 좋아요 조회
-    		
+    		// 댓글 작성 이벤트
+    		$(".commentBtn").on("click", function(){
+    			
+    			let postId = $(this).data("comment-btn");
+    			let comment = $("#comment" + postId).val();
+    			
+    			if(comment == ""){
+    				alert("댓글을 입력하세요");
+    				return ;
+    			}
+    			
+    			let formData = new FormData();
+    			formData.append("postId", postId);
+    			formData.append("comment", comment);
+    			
+    			// 댓글 작성 ajax
+    			$.ajax({
+    				type : "post"
+    				, url : "/marondalgram/post/comment/create"
+    				, data : formData
+    				, processData : false // 파일 업로드 필수
+                    , contentType : false // 파일 업로드 필수
+                    , success : function(data){
+                    	if(data.result == "success"){
+                    		location.reload(true);
+                    	}else{
+                    		alert("댓글작성 실패!");
+                    	}
+                    }
+    				, error : function(){
+    					alert("댓글작성 에러")
+    				}
+    			});//댓글 작성 ajax 종료 
+    			
+    		});// 댓글 작성 종료
     		
     		// 좋아요 클릭 이벤트
     		$(".likeBtn").on("click", function(){
@@ -123,7 +187,7 @@
     			let formData = new FormData();
     			formData.append("postId", postId);
     			
-    			if($(this).data("like-check")){
+    			if($(this).data("like-check") == true){
     				$.ajax({
         				type : "delete"
         				, url : "/marondalgram/post/like/delete"
@@ -132,8 +196,6 @@
                         , contentType : false // 파일 업로드 필수
                         , success : function(data){
                         	if(data.result == "success"){
-                        		/* $("#likeBtnNoFill" + postId).addClass("d-none");
-                        		$("#likeBtnFill" + postId).removeClass("d-none"); */
                         		location.reload(true);
                         	}else{
                         		alert("좋아요 취소 실패")
@@ -153,8 +215,7 @@
                         , contentType : false // 파일 업로드 필수
                         , success : function(data){
                         	if(data.result == "success"){
-                        		/* $("#likeBtnNoFill" + postId).addClass("d-none");
-                        		$("#likeBtnFill" + postId).removeClass("d-none"); */
+                        		
                         		location.reload(true);
                         	}else{
                         		alert("좋아요 실패")
