--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -14,6 +14,9 @@
 	<div id="wrap" class="d-flex">
 			<th:block th:replace="~{fragments/menu :: menu}"></th:block>
 			<th:block layout:fragment = "mainContents"></th:block>
+			<!-- 모달 -->
+			<div id="createModal">
+			</div>
 	</div>
 	
 	
@@ -27,5 +30,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
     <th:block layout:fragment="script"></th:block>
+    
 </body>
 </html>
