[배경민]  - 게시글 삭제 수정  - 게시글 만들기를 모달로 띄우기 진행 중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -274,5 +274,13 @@ input:focus { outline:none; }
 	
 }
 
+.custom-modal-white{
+	width : 745px;
+	height : 800px;
+	margin : 0 auto;
+	border-radius : 32px;
+	background-color: rgb(255,255,255); 
+}
+
 
 
