--- a/src/main/resources/templates/post/createImage.html
+++ b/src/main/resources/templates/post/createImage.html
@@ -25,7 +25,20 @@
 	           <input type="file" class="d-none" id="fileInput">
 	        </div>
         </div>
+        
+        <!-- 이미지 확인 Modal -->
+		<div class="modal fade" id="makePostModalImage" tabindex="-1" role="dialog" aria-hidden="true">
+		  <div class="modal-dialog modal-lg" role="document">
+		    <div class="modal-content">
+		    	<div class="custom-modal-white">
+			    	<div class="custom-modal-body">
+			    	</div>
+			    </div>
+		    </div>
+		  </div>
+		</div>
     </section>
+    
     
     <script layout:fragment = "script">
     	$(document).ready(function(){
@@ -54,7 +67,10 @@
     				, success : function(data){
     					if(data.result == "success"){
     						let imagePath = data.imagePath;
-    						location.href = "/marondalgram/post/create/image-check-view?imagePath=" + imagePath;
+    						// 게시글 만들기 띄우기 모달
+    			    		$("#makePostModalImage .custom-modal-body").load("/marondalgram/post/create/image-check-view?imagePath=" + imagePath);
+    			    		$("#makePostModal").modal("hide");
+    			    		$("#makePostModalImage").modal("show");
     					}else{
     						alert("파일 입력 실패");
     					}
