--- a/src/main/resources/templates/post/timeline.html
+++ b/src/main/resources/templates/post/timeline.html
@@ -149,11 +149,38 @@
 		    </div>
 		  </div>
 		</div>
+		
+		<!--  이미지 확인 Modal -->
+		<div class="modal fade" id="makePostModalImage" tabindex="-1" role="dialog" aria-hidden="true">
+		  <div class="modal-dialog modal-lg" role="document">
+		    <div class="modal-content">
+		    	<div class="custom-modal-white">
+			    	<div class="custom-modal-body">
+			    	</div>
+			    </div>
+		    </div>
+		  </div>
+		</div>
+		
+		<!-- 게시글 본문 입력 Modal -->
+		<div class="modal fade" id="makePostModalText" tabindex="-1" role="dialog" aria-hidden="true">
+		  <div class="modal-dialog modal-lg" role="document">
+		    <div class="modal-content">
+		    	<div class="custom-modal-white">
+			    	<div class="custom-modal-body">
+			    	</div>
+			    </div>
+		    </div>
+		  </div>
+		</div> 
     	
     </section>
     
     <script layout:fragment="script">
     	$(document).ready(function(){
+    		
+    		
+    		
     		
     		// 게시글 만들기 띄우기 모달
     		$("#openPostMakeModal").on("click", function(){
