--- a/src/main/resources/templates/post/timeline.html
+++ b/src/main/resources/templates/post/timeline.html
@@ -140,7 +140,7 @@
 		
 		<!-- 게시글 만들기 Modal -->
 		<div class="modal fade" id="makePostModal" tabindex="-1" role="dialog" aria-hidden="true">
-		  <div class="modal-dialog modal-lg" role="document">
+		  <div class="modal-dialog modal-lg modal-radius" role="document">
 		    <div class="modal-content">
 		    	<div class="custom-modal-white">
 			    	<div class="custom-modal-body">
@@ -152,7 +152,7 @@
 		
 		<!--  이미지 확인 Modal -->
 		<div class="modal fade" id="makePostModalImage" tabindex="-1" role="dialog" aria-hidden="true">
-		  <div class="modal-dialog modal-lg" role="document">
+		  <div class="modal-dialog modal-lg modal-radius" role="document">
 		    <div class="modal-content">
 		    	<div class="custom-modal-white">
 			    	<div class="custom-modal-body">
@@ -164,9 +164,9 @@
 		
 		<!-- 게시글 본문 입력 Modal -->
 		<div class="modal fade" id="makePostModalText" tabindex="-1" role="dialog" aria-hidden="true">
-		  <div class="modal-dialog modal-lg" role="document">
+		  <div class="modal-dialog modal-xl modal-radius" role="document">
 		    <div class="modal-content">
-		    	<div class="custom-modal-white">
+		    	<div class="custom-modal-white-xl">
 			    	<div class="custom-modal-body">
 			    	</div>
 			    </div>
