[배경민]  - 로그인 안 되었을 때는 로그인 화면으로 이동  - 로그인 되었을 때는 로그인 화면에 접근 안되게 수정  - 게시글 수정 기능 추가중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,7 +2,7 @@
 
 #wrap{
 	width : 1440px;
-	height : 1024px;
+	/*height : 1024px;*/
 	margin : 0 auto; 
 	overflow: auto;
 	flex-direction : row;
@@ -188,7 +188,7 @@ input:focus { outline:none; }
 
 .mainMenuSection{
 	width : 346px;
-	height : 1024px;
+	height : 100%;
 	display : flex;
 	flex-direction : column;
 	position : fixed;
@@ -290,8 +290,28 @@ input:focus { outline:none; }
 	background-color: rgb(255,255,255); 
 }
 
-.modal-radius{
-	border-radius : 32px;
+
+#wrap::-webkit-scrollbar {
+    width: 4px;  /* 스크롤바의 너비 */
 }
 
+#wrap::-webkit-scrollbar-thumb {
+    height: 20%; /* 스크롤바의 길이 */
+    background: #8a8a8a; /* 스크롤바의 색상 */
+    
+    border-radius: 5px;
+}
+
+#wrap::-webkit-scrollbar-track {
+    background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
+}
+
+.modalSelector:hover{
+	background : #e6e6e6;
+	
+}
+
+.modalSelector:active{
+	background : #b5b3b4;
+}
 
