--- a/src/main/resources/templates/post/timeline.html
+++ b/src/main/resources/templates/post/timeline.html
@@ -158,7 +158,7 @@
 		</div>
 		
 		<!-- 게시글 본문 입력 Modal -->
-		<div class="modal fade" id="makePostModalText" tabindex="-1" role="dialog" aria-hidden="true" data-update-post-id="">
+		<div class="modal fade" id="makePostModalText" tabindex="-1" role="dialog" aria-hidden="true" >
 		  <div class="modal-dialog modal-xl" role="document">
 		    <div class="modal-content">
 		    	<div class="custom-modal-white-xl">
@@ -177,10 +177,8 @@
     		
     		// 수정 버튼 클릭 이벤트
     		$("#updateBtn").on("click", function(){
-    			let postId = $(this).data("post-id-three-dot");
     			
-    			//받아온 postId를 modal에 저장시킴
-    			$(".makePostModalText").data("update-post-id", postId);
+    			
     			
     			// 만들기 modal 오픈
     			$("#makePostModal .custom-modal-body").load("/marondalgram/post/create/image-view");
@@ -196,10 +194,14 @@
     			
     		
     		
-    		// 삭제 모달
+    		// 수정 삭제 모달
     		$(".threeDot").on("click", function(){
     			let postId = $(this).data("post-id-three-dot");
+    			//받아온 postId를 modal에 저장시킴
+    			$("#makePostModalText").data("update-post-id", postId);
     			$(".deletePostBtn").data("post-id", postId);
+    			
+    			
     			$('#optionModal').modal("show");
     		});
     		
